2012-11-26
* remove non-functioning code from bat/images.py and replace it with
configuration options
* remove unused code from bat/bruteforcescan.py
* remove unused code from bat/fwunpack.py
* start on verifier for PE executables

2012-11-25
* rename bat/bruteforce.py to bat/bruteforcescan.py to avoid nameclashes.
Actually bruteforce.py should be renamed as well.

2012-11-22
* fix error in bat/bruteforce.py: actually use the checksum instead of the
size, which could have lead to misclassifications
* add configuration option 'outputlite' to make smaller archives (without a
dump of all data)
* add simple verifier to tag Java JAR files (incomplete and needs more sanity
checks)
* add extra sanity check for yaffs2 unpacking

2012-11-21
* fix errors in database creation script, add preliminary blacklisting
capabilities.

2012-11-16
* rewrite leafscans to return a dictionary instead of a list of dictionaries

2012-11-13
* support "noscan" and "scanonly" for postrunscans, for as far as applicable

2012-11-12
* fix config initialization bug in batgui
* add extra sanity checks in XZ unpacking based on 'streamflags'
* significantly rework XZ unpacking to make it more sane
* introduce 'scanonly' to filter out scans. This is complementary to 'noscan'

2012-11-11
* allow multiple values in 'storetype'
* display licensing information in GUI
* XZ unpacking cleanups
* condense filenames in generateuniquehtml.py for easier display in GUI
* assume .txx files are C files

2012-11-10
* stop processing XZ files as soon as all possible XZ files have been extracted.
* put extracted XZ files in blacklist
* use xz -l instead of xz -t for faster testing.

2012-11-04
* also store line numbers for function names

2012-10-31
* introduce new configuration parameters for postrunscans to store results in
a more generic way. Rewrite data dumping routine to take advantage of this.

2012-10-30
* parallellise more in database creation script
* add some more granularity to scanning in parallel
